--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
   	<div class="bar3"></div>
   </div>
 	<!-- -->
-
-
   </div>
+
+<div id="noticias">
+  
+</div>
 
 
   <div id="full" class="hidden">
