--- a/index.html
+++ b/index.html
@@ -33,20 +33,28 @@
 	<!-- -->
   </div>
 
-<div id="noticias" class="page">
+<div id="noticias" class="page" onload="pastel()">
   <span class="blank-space-1">&nbsp;</span>
-  <!-- <script id="noticias-template" type="x-handlebars-template">
-  {{#each this}} -->
-    <a href="{{pointer}}" class="text-decor-none"><div class="card mx-auto mb-5 w-98" data-index="{{id}}">
+    <!-- <a href="{{pointer}}" class="text-decor-none"><div class="card mx-auto mb-5 w-98" data-index="{{id}}">
       <img class="card-img-top" src="{{imgcard}}" alt="Card image cap">
     <div class="card-body">
       <p class="card-text text-center font-weight-bold">{{titulo}}</p>
-    </div></a>
-    <!-- {{/each}}
-  </script> -->
+    </div></a> -->
+  </div>
+</div>
+
+  <div id="menu" class="page">
+    <span class="blank-space-1">
+      <ul class="menu1 text-decor-none">
+        <li>Home</li>
+        <li>Rotas</li>
+        <li>Episódios</li>
+        <li>Sobre</li>
+        <li>Configurações</li>
+      </ul>
+    </span>
   </div>
 
-</div>
 
 
   <div id="full" class="hidden">
