--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
 
 <div id="noticias" class="page" onload="pastel()">
   <span class="blank-space-1">&nbsp;</span>
-    <!-- <a href="{{pointer}}" class="text-decor-none"><div class="card mx-auto mb-5 w-98" data-index="{{id}}">
-      <img class="card-img-top" src="{{imgcard}}" alt="Card image cap">
-    <div class="card-body">
-      <p class="card-text text-center font-weight-bold">{{titulo}}</p>
-    </div></a> -->
+  <!-- Cards aqui -->
   </div>
 </div>
 
@@ -50,7 +46,7 @@
         <li>Rotas</li>
         <li>Episódios</li>
         <li>Sobre</li>
-        <li>Configurações</li>
+        <li>Configuaarações</li>
       </ul>
     </span>
   </div>
@@ -68,3 +64,10 @@
   </div>
   </body>
 </html>
+
+<!-- template cards -->
+    <!-- <a href="{{pointer}}" class="text-decor-none"><div class="card mx-auto mb-5 w-98" data-index="{{id}}">
+      <img class="card-img-top" src="{{imgcard}}" alt="Card image cap">
+    <div class="card-body">
+      <p class="card-text text-center font-weight-bold">{{titulo}}</p>
+    </div></a> -->
