to com mto sono

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="js/urbs.js"></script>
   <title>Contrafluxo</title>
   
-  <div id="splash-screen" class="page hidden">
+  <div id="splash-screen" class="page bgR hidden">
   	<img src="assets/logo_main.png" class="logo_cf z-49 p-fixed" id="logo-splash">	
   	<img src="assets/transitions/splash.png" class="w-100 z-50 p-absolute splash-transition1" id="seta-splash">
   </div>
@@ -33,22 +33,24 @@
 	<!-- -->
   </div>
 
-<div id="noticias" class="page" onload="pastel()">
+<div id="noticias" class="page hidden bgR" onload="json_cards()">
   <span class="blank-space-1">&nbsp;</span>
   <!-- Cards aqui -->
   </div>
 </div>
 
-  <div id="menu" class="page">
-    <span class="blank-space-1">
-      <ul class="menu1 text-decor-none">
-        <li>Home</li>
-        <li>Rotas</li>
-        <li>Episódios</li>
-        <li>Sobre</li>
-        <li>Configuaarações</li>
-      </ul>
-    </span>
+  <div id="menu" class="page bgG">
+      <span class="blank-space-1"></span>
+    <div class="table menu1 text-center">
+      <table class="mx-auto">
+        <tr><td>Home</td></tr>
+        <tr><td>Rotas</td></tr>
+        <tr><td>Episódios</td></tr>
+        <tr><td>Sobre</td></tr>
+        <tr><td>Configurações</td></tr>
+      </table>
+        </div>
+
   </div>
 
 
