--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 	<!-- -->
   </div>
 
-<div id="noticias" class="page hidden bgR" onload="json_cards()">
+<div id="noticias" class="page bgR" onload="json_cards()">
   <span class="blank-space-1">&nbsp;</span>
   <!-- Cards aqui -->
   </div>
 </div>
 
-  <div id="menu" class="page bgG">
+  <div id="menu" class="page bgG hidden">
       <span class="blank-space-1"></span>
     <div class="table menu1 text-center">
       <table class="mx-auto">
