keeping up to date

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<!-- -->
   </div>
 
-<div id="noticias" class="page bgR" onload="json_cards()">
+<div id="noticias" class="page hidden bgR" onload="json_cards()">
   <span class="blank-space-1">&nbsp;</span>
   <!-- Cards aqui -->
   </div>
@@ -50,8 +50,17 @@
         <tr><td>Configurações</td></tr>
       </table>
         </div>
+</div>
+
+<div id="episodios" class="page bgR">
+  <a href="#s01e01">
+  <div class="container-fluid">
+    <img src="" alt="" class="img-fluid">
+  </a>
 
   </div>
+
+</div>
 
 
 
