--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<!-- -->
   </div>
 
-<div id="noticias" class="page bgR" onload="json_cards()">
+<div id="noticias" class="page bgR hidden" onload="json_cards()">
   <span class="blank-space-1">&nbsp;</span>
   <!-- Cards aqui -->
   </div>
@@ -50,8 +50,12 @@
         <tr><td>Configurações</td></tr>
       </table>
         </div>
+</div>
 
-  </div>
+<div id="episodios" class="page bgR" onload="json_eps()">
+  <!-- thumbs eps aqui -->
+</div>
+</div>
 
 
 
@@ -73,3 +77,11 @@
     <div class="card-body">
       <p class="card-text text-center font-weight-bold">{{titulo}}</p>
     </div></a> -->
+
+
+<!-- template thumb eps -->
+  <!-- <a href="#s01e01_thumb">
+  <div class="container-fluid">
+    <img src="" alt="" class="img-fluid">
+    </div>
+  </a> -->
