--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   	<img src="assets/transitions/splash.png" class="w-100 z-50 p-absolute splash-transition1" id="seta-splash">
   </div>
 
-  <div id="fixed-top-bar" class="shadow pb-3 pt-3">
+  <div id="fixed-top-bar" class="fixed-top py-2 slidd">
   <!-- This is the menu button, animated -->
   <div class="col-2 ml-1 pointer" onclick="myFunction(this)">
   	<div class="bar1"></div>
@@ -53,7 +53,7 @@
 </div>
 
 <div id="episodios" class="page bgR" onload="json_eps()">
-  <!-- thumbs eps aqui -->
+  <!-- Lista de Episódios aqui -->
 </div>
 </div>
 
